test/libsolidity/syntaxTests/array/length/invalid_expression_4.sol
contract C {
    uint[1.111111E1111111111111] ids;
}
// ----
// TypeError 5462: (22-44='1.111111E1111111111111'): Invalid array length, expected integer literal or constant expression.
